# apps/api/src/app.module.ts
@@ -22,6 +22,7 @@ import { PartsModule } from './modules/parts/parts.module';
 import { AdminModule } from './modules/admin/admin.module';
 import { DisputesModule } from './modules/disputes/disputes.module';
 import { AccidentsModule } from './modules/accidents/accidents.module';
+import { PilotModule } from './modules/pilot/pilot.module';
 import { LogisticsModule } from './modules/logistics/logistics.module';
 import { JwtAuthGuard } from './modules/identity/interface/http/guards/jwt-auth.guard';
 import { RolesGuard } from './modules/identity/interface/http/guards/roles.guard';
@@ -54,6 +55,7 @@ import { RolesGuard } from './modules/identity/interface/http/guards/roles.guard
     DisputesModule,
     LogisticsModule,
     AccidentsModule,
+    PilotModule,
     NotificationsModule,
   ],
   providers: [
